--- a/theme/package.json
+++ b/theme/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-theme-links",
+  "name": "@andrioid/gatsby-theme-links",
   "author": "Andri Óskarsson <andri80@gmail.com>",
   "repository": {
     "type": "git",
