--- a/demo/package.json
+++ b/demo/package.json
@@ -15,7 +15,7 @@
     "gatsby": "^2.13.1",
     "gatsby-source-github-api": "^0.1.0",
     "gatsby-source-pinboard": "^0.1.7",
-    "gatsby-theme-jam-example": "*",
+    "@andrioid/gatsby-theme-links": "*",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
